message SyncInitialization {
	required string sync_id = 1;
	required string resource = 2;
	required int32 number_files = 3;
}

message FileChunk {
	required string relative_path = 1;
	required int32 remaining_chunks = 2;
	repeated GenericOperation ops = 3;
}

message FileOperation {
	required string relative_path = 1;
	required GenericOperation op = 2;
}

message GenericOperation {
	optional int32 id = 1;

	enum OperationType {
		MKNOD = 3;
		MKDIR = 4;
		SYMLINK = 5;
		UNLINK = 6;
		RMDIR = 7;
		RENAME = 8;
		LINK = 9;
		CHMOD = 10;
		CHOWN = 11;
		TRUNCATE = 12;
		WRITE = 13;
	}

	optional OperationType type = 2;

	optional MknodOperation mknod_op = 3;
	optional MkdirOperation mkdir_op = 4;
	optional SymlinkOperation symlink_op = 5;
	optional UnlinkOperation unlink_op = 6;
	optional RmdirOperation rmdir_op = 7;
	optional RenameOperation rename_op = 8;
	optional LinkOperation link_op = 9;
	optional ChmodOperation chmod_op = 10;
	optional ChownOperation chown_op = 11;
	optional TruncateOperation truncate_op = 12;
	optional WriteOperation write_op = 13;
}

message MknodOperation {
	optional int32 dummy = 3;
}

message MkdirOperation {
	optional int32 dummy = 4;
}

message SymlinkOperation {
	optional int32 dummy = 5;
}

message UnlinkOperation {
	optional int32 dummy = 6;
}

message RmdirOperation {
	optional int32 dummy = 7;
}

message RenameOperation {
	optional int32 dummy = 8;
}

message LinkOperation {
	optional int32 dummy = 9;
}

message ChmodOperation {
	optional int32 dummy = 10;
}

message ChownOperation {
	optional int32 dummy = 11;
}

message TruncateOperation {
	optional int32 dummy = 12;
}

message WriteOperation {
	required int64 offset = 1;
	required int32 size = 2;
	optional bytes data = 3;
}
